opam-version: "2.0"
synopsis: "Parsing OCaml library for EDN format"
description:
  "This library implements EDN parser and generator for OCaml."
maintainer: "Andrew Rudenko <ceo@prepor.ru>"
authors: "Andrew Rudenko <ceo@prepor.ru>"
homepage: "http://github.com/prepor/ocaml-edn"
license: "ISC"
bug-reports: "http://github.com/prepor/ocaml-edn/issues"
dev-repo: "git+https://github.com/prepor/ocaml-edn.git"
doc: "https://prepor.github.io/ocaml-edn/doc"
build: [["dune" "build" "-p" name "-j" jobs "@runtest" {with-test}]]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "2.2.0"}
  "menhir"
  "ounit2" {with-test}
]
depopts: [
  "cconv"
]
